Ispravljena skripta za importovanje u bazu (dodat unicode decoding sa string escape-ovanjem). Prefiksi od sad mogu da se biraju iz combo box-a.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,5 +49,7 @@
 <!-- My libraries -->
 <script src="{{ url_for('static', filename='javascript/app.js') }}"></script>
 <script src="{{ url_for('static', filename='javascript/router.js') }}"></script>
+<script src="{{ url_for('static', filename='javascript/services/Service.js') }}"></script>
+<script src="{{ url_for('static', filename='javascript/controllers/MainController.js') }}"></script>
 </body>
 </html>
